dark layout change

--- a/assets/pug/pages/template/alert.pug
+++ b/assets/pug/pages/template/alert.pug
@@ -58,10 +58,10 @@ html(lang='en')
                             span.font-extrabold Harry up, 
                             | Sale is live now !!
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white") 
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark ")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2 ")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-col flex-wrap gap-2"&gt;
                           |    &lt;div class="flex flex-col flex-wrap w-full gap-2 px-4 py-3 rounded bg-primary-light text-primary" role="alert"&gt;
                           |        &lt;p&gt;&lt;span class="font-extrabold"&gt;Harry up,&lt;/span&gt; Sale is live now !!&lt;/p&gt;
@@ -87,10 +87,10 @@ html(lang='en')
                             span.font-extrabold Harry up, 
                             | Sale is live now !!
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white") 
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark ")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2 ")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-col flex-wrap gap-2"&gt;
                           |    &lt;div class="flex flex-col flex-wrap w-full gap-2 px-4 py-3 border rounded border-primary text-primary" role="alert"&gt;
                           |        &lt;p&gt;&lt;span class="font-extrabold"&gt;Harry up,&lt;/span&gt; Sale is live now !!&lt;/p&gt;
@@ -116,10 +116,10 @@ html(lang='en')
                             span.font-extrabold Harry up, 
                             | Sale is live now !!
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white") 
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark ")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2 ")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-col flex-wrap gap-2"&gt;
                           |    &lt;div class="flex flex-col flex-wrap w-full gap-2 px-4 py-3 text-white rounded bg-success" role="alert"&gt;
                           |        &lt;p&gt;&lt;span class="font-extrabold"&gt;Harry up,&lt;/span&gt; Sale is live now !!&lt;/p&gt;
@@ -144,10 +144,10 @@ html(lang='en')
                             span.font-extrabold Harry up, 
                             | Sale is live now !!
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white") 
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark ")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2 ")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-col flex-wrap gap-2"&gt;
                           |    &lt;div class="flex items-center w-full px-4 py-3 text-white rounded bg-warning" role="alert"&gt;
                           |        +SVG_ICON("Info-Circle","w-[1.25rem] h-[1.25rem] stroke-white mr-2")
@@ -177,10 +177,10 @@ html(lang='en')
                             button.btn.btn-secondary.py-2.px-3.btn-rounded.text-white Deny
                             button.btn.btn-secondary.py-2.px-3.btn-rounded.text-white Accept
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white") 
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark ")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2 ")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-col flex-wrap gap-2"&gt;
                           |    &lt;div class="flex items-center justify-between w-full px-4 py-3 border rounded border-secondary text-secondary lg:flex-col lg:items-start 2xl:justify-between 2xl:items-center 2xl:gap-2 2md:flex-row 2md:items-center sm:flex-col sm:items-start" role="alert"&gt;
                           |        &lt;div class="flex"&gt;
@@ -215,10 +215,10 @@ html(lang='en')
                               +SVG_ICON("Notification","w-[1.25rem] h-[1.25rem] stroke-white mr-2")
                               p   REMIND ME LATER
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white") 
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark ")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2 ")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-col flex-wrap gap-2"&gt;
                           |    &lt;div class="flex items-center justify-between w-full px-4 py-3 border rounded border-primary lg:flex-col lg:justify-start lg:items-start lg:gap-2 2md:flex-row 2md:justify-between 2md:items-center sm:flex-col sm:justify-start sm:items-start" role="alert"&gt;
                           |      &lt;p&gt; Space running out &lt;/p&gt;
@@ -253,10 +253,10 @@ html(lang='en')
                             p   Ready to update 
                               span.font-extrabold ~Check it out!
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white") 
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark ")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2 ")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class=".flex flex-col gap-2"&gt; 
                           |    &lt;div class="flex w-full px-4 py-3 text-white rounded bg-info" role="alert"&gt;
                           |      &lt;div&gt;+SVG_ICON("Download","w-[1.25rem] h-[1.25rem] stroke-white mr-2")&lt;/div&gt;
@@ -289,10 +289,10 @@ html(lang='en')
                             ul(class="pl-4 list-disc text-white-500")
                               li(class="mt-2 first:mt-0") At least 10 characters with at least one uppercase character
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")  
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")  
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark ")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-col flex-wrap gap-2"&gt;
                           |    &lt;div class="flex w-full px-4 py-3 text-white rounded bg-danger" role="alert"&gt;
                           |      &lt;div&gt;+SVG_ICON("Danger","w-[1.25rem] h-[1.25rem] stroke-white mr-2")&lt;/div&gt;
@@ -304,7 +304,6 @@ html(lang='en')
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |&lt;/div&gt;
-
         // Page Body End 
         +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
 
