--- a/assets/pug/pages/template/badge.pug
+++ b/assets/pug/pages/template/badge.pug
@@ -61,10 +61,10 @@ html(lang='en')
                         div.badge.bg-danger.text-white.rounded-full Danger
                         div.badge.bg-light.text-title.rounded-full Light
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt;
                           |    &lt;div class="text-white rounded-full badge bg-primary"&gt;Primary&lt;/div&gt; 
                           |    &lt;div class="text-white rounded-full badge bg-secondary"&gt;Secondary&lt;/div&gt;
@@ -97,10 +97,10 @@ html(lang='en')
                         div.badge.bg-danger.text-white.rounded Danger
                         div.badge.bg-light.text-title.rounded Light 
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt; 
                           |    &lt;div class="text-white rounded badge bg-primary"&gt;Primary&lt;/div&gt; 
                           |    &lt;div class="text-white rounded badge bg-secondary"&gt;Secondary&lt;/div&gt;
@@ -133,10 +133,10 @@ html(lang='en')
                         div.badge.border.border-danger.text-danger.rounded Danger
                         div.badge.border.border-light.text-title.rounded Light 
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt; 
                           |    &lt;div class="border rounded badge border-primary text-primary"&gt;Primary&lt;/div&gt; 
                           |    &lt;div class="border rounded badge border-secondary text-secondary"&gt;Secondary&lt;/div&gt;
@@ -183,10 +183,10 @@ html(lang='en')
                           div(class="w-1 h-1 bg-current rounded-full")
                           span.leading-none Light
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white") 
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2 dark:bg-sidebar-dark")
                           |&lt;div class="flex flex-wrap gap-2"&gt; 
                           |    &lt;div class="flex flex-wrap items-center gap-2 text-white rounded-full badge bg-primary badge-md"&gt;; 
                           |      &lt;div class="w-1 h-1 bg-current rounded-full"&gt;&lt;/div&gt;
@@ -237,10 +237,10 @@ html(lang='en')
                         div.badge.bg-primary.badge-sm.text-white.rounded Badge-sm
                         div.badge.bg-primary.badge-xs.text-white.rounded Badge-xs
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt; 
                           |    &lt;div class="text-white rounded badge bg-primary badge-lg"&gt;Badge-lg&lt;/div&gt; 
                           |    &lt;div class="text-white rounded badge bg-primary badge-md"&gt;Badge-ms&lt;/div&gt;
@@ -269,10 +269,10 @@ html(lang='en')
                           span.text-sm Remove
                           +SVG_ICON("Close-Square","w-[1.125rem] h-[1.125rem] stroke-white")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap items-center gap-2"&gt; 
                           |    &lt;div class="flex flex-wrap items-center gap-2 text-white rounded badge badge-md bg-warning"&gt; 
                           |       +SVG_ICON("Danger","w-[1.125rem] h-[1.125rem] stroke-white")
@@ -305,10 +305,10 @@ html(lang='en')
                         button.btn.btn-secondary.text-white.flex.flex-wrap.items-center.gap-2 Inbox
                           span.badge.badge-xs.bg-white.text-title.rounded(class="dark:text-sidebar-dark") +50
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap items-center gap-2"&gt; 
                           |    &lt;button class="flex flex-wrap items-center gap-2 text-white btn btn-info"&gt;Notification&lt;/button&gt; 
                           |      &lt;span class="bg-white rounded badge badge-xs text-title"&gt;+99&lt;/span&gt;
@@ -335,10 +335,10 @@ html(lang='en')
                         p.text-sm.flex.items-center.gap-2 click on, for new update
                           span.badge.badge-sm.bg-primary.rounded-full Update
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-1"&gt; 
                           |    &lt;p class="flex items-center gap-2 text-sm"&gt;  Here, the latest news
                           |       &lt;span class="rounded-full badge badge-xs bg-primary"&gt;News&lt;/span&gt; 
