--- a/html/template/badge.html
+++ b/html/template/badge.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="sticky top-0 z-[4]">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] sm:py-[17px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -1153,8 +1153,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="text-white rounded-full badge bg-primary"&gt;Primary&lt;/div&gt; 
    &lt;div class="text-white rounded-full badge bg-secondary"&gt;Secondary&lt;/div&gt;
    &lt;div class="text-white rounded-full badge bg-info"&gt;Info&lt;/div&gt; 
@@ -1194,8 +1194,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
    &lt;div class="text-white rounded badge bg-primary"&gt;Primary&lt;/div&gt; 
    &lt;div class="text-white rounded badge bg-secondary"&gt;Secondary&lt;/div&gt;
    &lt;div class="text-white rounded badge bg-info"&gt;Info&lt;/div&gt; 
@@ -1235,8 +1235,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
    &lt;div class="border rounded badge border-primary text-primary"&gt;Primary&lt;/div&gt; 
    &lt;div class="border rounded badge border-secondary text-secondary"&gt;Secondary&lt;/div&gt;
    &lt;div class="border rounded badge border-info text-info"&gt;Info&lt;/div&gt; 
@@ -1290,8 +1290,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2 dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt; 
    &lt;div class="flex flex-wrap items-center gap-2 text-white rounded-full badge bg-primary badge-md"&gt;; 
      &lt;div class="w-1 h-1 bg-current rounded-full"&gt;&lt;/div&gt;
      &lt;span class="leading-none"&gt; Primary &lt;/span&gt;  
@@ -1349,8 +1349,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
    &lt;div class="text-white rounded badge bg-primary badge-lg"&gt;Badge-lg&lt;/div&gt; 
    &lt;div class="text-white rounded badge bg-primary badge-md"&gt;Badge-ms&lt;/div&gt;
    &lt;div class="text-white rounded badge bg-primary badge-sm"&gt;Badge-sm&lt;/div&gt; 
@@ -1390,8 +1390,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-2"&gt; 
    &lt;div class="flex flex-wrap items-center gap-2 text-white rounded badge badge-md bg-warning"&gt; 
       +SVG_ICON("Danger","w-[1.125rem] h-[1.125rem] stroke-white")
       &lt;span class="text-sm"&gt; Warning &lt;/span&gt; 
@@ -1427,8 +1427,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-2"&gt; 
    &lt;button class="flex flex-wrap items-center gap-2 text-white btn btn-info"&gt;Notification&lt;/button&gt; 
      &lt;span class="bg-white rounded badge badge-xs text-title"&gt;+99&lt;/span&gt;
    &lt;button class="flex flex-wrap items-center gap-2 text-white btn btn-secondary"&gt;Info&lt;/button&gt; 
@@ -1460,8 +1460,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-1"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-1"&gt; 
    &lt;p class="flex items-center gap-2 text-sm"&gt;  Here, the latest news
       &lt;span class="rounded-full badge badge-xs bg-primary"&gt;News&lt;/span&gt; 
    &lt;/p&gt;
