--- a/html/template/button.html
+++ b/html/template/button.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="sticky top-0 z-[4]">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] sm:py-[17px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -1153,8 +1153,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
    &lt;button class="text-white btn btn-primary hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Primary&lt;/button&gt; 
    &lt;button class="text-white btn btn-secondary hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Secondary&lt;/button&gt;
    &lt;button class="text-white btn btn-info hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Info&lt;/button&gt; 
@@ -1194,8 +1194,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
    &lt;button class="text-white btn btn-active btn-primary hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Primary&lt;/button&gt; 
    &lt;button class="text-white btn btn-active btn-secondary hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Secondary&lt;/button&gt;
    &lt;button class="text-white btn btn-active btn-info hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Info&lt;/button&gt; 
@@ -1235,8 +1235,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;button class="btn btn-outline btn-primary dark:bg-sidebar-dark"&gt;Primary&lt;/button&gt; 
    &lt;button class="btn btn-outline btn-secondary dark:bg-sidebar-dark"&gt;Secondary&lt;/button&gt;
    &lt;button class="btn btn-outline btn-info dark:bg-sidebar-dark"&gt;Info&lt;/button&gt; 
@@ -1273,8 +1273,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
    &lt;a class="text-white btn btn-primary" href="javascript:void(0)" role="button"&gt;Link&lt;/a&gt; 
    &lt;button class="text-white btn btn-secondary"&gt;Button&lt;/button&gt;
    &lt;input class="text-white btn btn-info" type="submit" value="Submit"&gt;
@@ -1309,8 +1309,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
    &lt;button class="btn btn-outline btn-success btn-lg.text-primary"&gt;Large&lt;/button&gt;
    &lt;button class="btn btn-outline btn-info btn-md.text-primary"&gt;Medium&lt;/button&gt;
    &lt;button class="btn btn-outline btn-secondary btn-sm.text-primary"&gt;Small&lt;/button&gt;
@@ -1344,8 +1344,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
    &lt;button class="btn btn-warning btn-rounded h-14 w-14"&gt; &lt;i class="w-4 h-4 stroke-white"&gt; &lt;/i&gt;  &lt;/button&gt; 
    &lt;button class="btn btn-outline btn-warning btn-rounded h-14 w-14"&gt; &lt;i class="w-4 h-4 stroke-warning group-hover:stroke-white"&gt; &lt;/i&gt;  &lt;/button&gt;
    &lt;button class="btn btn-success btn-square h-14 w-14"&gt; &lt;i class="w-4 h-4 stroke-white"&gt; &lt;/i&gt;  &lt;/button&gt;
@@ -1372,13 +1372,13 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
-                        <button class="btn btn-primary" disabled="disabled">Disabled attribute</button>
-                        <button class="btn btn-secondary btn-disabled cursor-auto">Disabled class</button>
+                        <button class="btn btn-primary dark:bg-sidebar-dark2" disabled="disabled">Disabled attribute</button>
+                        <button class="btn btn-secondary btn-disabled cursor-auto dark:bg-sidebar-dark2">Disabled class</button>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
    &lt;button class="btn btn-primary" disabled="disabled"&gt;disabled attribute&lt;/button&gt; 
    &lt;button class="cursor-auto btn btn-secondary btn-disabled"&gt;disabled class&lt;/button&gt;
 &lt;/div&gt;</code></pre>
@@ -1416,8 +1416,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt; 
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
    &lt;button class="flex items-center justify-center gap-2 text-white btn btn-secondary"&gt;
       +SVG_ICON("Heart","w-[1.125rem] h-[1.125rem] stroke-white")Likes
    &lt;/button&gt; 
@@ -1465,8 +1465,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;button class="btn btn-primary"&gt;
      &lt;div role="status"&gt;
        &lt;svg class="w-5 h-5 text-gray-200 animate-spin fill-primary"&gt;&lt;/svg&gt;
@@ -1505,8 +1505,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;button class="block w-full text-white btn btn-primary"&gt;Button block&lt;/button&gt;
 &lt;/div&gt;</code></pre>
                     </div>
@@ -1531,15 +1531,15 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
                         <div class="inline-flex rounded-none flex-wrap">
-                          <button class="py-2 px-3 text-sm font-medium text-white bg-primary rounded-none border border-gray-200 hover:bg-primary hover:text-white focus:text-white focus:bg-primary">Profile</button>
+                          <button class="py-2 px-3 text-sm font-medium text-white bg-primary rounded-none border border-gray-200 hover:bg-primary hover:text-white focus:text-white focus:bg-primary ">Profile</button>
                           <button class="py-2 px-3 text-sm font-medium text-gray-900 bg-white rounded-none border-t border-b border-gray-200 hover:bg-primary hover:text-white focus:text-white focus:bg-primary">Setting</button>
                           <button class="py-2 px-3 text-sm font-medium text-gray-900 bg-white rounded-none border border-gray-200 hover:bg-primary hover:text-white focus:text-white focus:bg-primary">Message</button>
                         </div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;button class="px-3 py-2 text-sm font-medium text-white border border-gray-200 rounded-none bg-primary hover:bg-primary hover:text-white focus:text-white focus:bg-primary"&gt;Profile&lt;/button&gt;
    &lt;button class="px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-none hover:bg-primary hover:text-white focus:text-white focus:bg-primary"&gt;Setting&lt;/button&gt;
    &lt;button class="px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-none hover:bg-primary hover:text-white focus:text-white focus:bg-primary"&gt;Message&lt;/button&gt;
