--- a/html/template/carousel.html
+++ b/html/template/carousel.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="sticky top-0 z-[4]">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] sm:py-[17px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -1158,8 +1158,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-6" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code>&lt;div class="w-full overflow-hidden carousel"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="w-full overflow-hidden carousel"&gt;
    &lt;div class="box-border relative flex flex-none w-full carousel-item snap-start" id="slide1"&gt;
       &lt;img class="w-full h-[17.625rem] xl:h-[13.4375rem] 2lg:h-60 sm:h-36 2sm:h-32" src="../../assets/images/carousel/1.jpg" alt="nature"&gt;
       &lt;div class="absolute flex justify-between transform left-5 right-5 text-white -translate-y-1/2 top-1/2 lg:left-2.5 lg:right-2.5"&gt;
@@ -1218,8 +1218,8 @@
                       <div class="flex justify-center w-full pt-2 gap-2"><a class="btn btn-xs bg-primary text-white" href="#item1">1</a><a class="btn btn-xs bg-primary text-white" href="#item2">2</a><a class="btn btn-xs bg-primary text-white" href="#item3">3</a><a class="btn btn-xs bg-primary text-white" href="#item4">4</a></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-6" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code>&lt;div class="w-full overflow-hidden carousel"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="w-full overflow-hidden carousel"&gt;
    &lt;div class="box-border flex flex-none w-full carousel-item snap-start" id="item1"&gt;
        &lt;img class="w-full h-[15.625rem] xl:h-[11.5rem] 2lg:h-60 sm:h-36 2sm:h-32" src="../../assets/images/carousel/3.jpg" alt="SKY VIEW"&gt;
    &lt;/div&gt;
@@ -1268,8 +1268,8 @@
                       <div class="flex justify-center w-full pt-2 space-x-3"><a class="btn h-2 w-2 bg-primary p-0" href="#slide-1"></a><a class="btn h-2 w-2 bg-primary p-0" href="#slide-2"></a><a class="btn h-2 w-2 bg-primary p-0" href="#slide-3"></a><a class="btn h-2 w-2 bg-primary p-0" href="#slide-4"></a></div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-6" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code>&lt;div class="w-full overflow-hidden carousel"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="w-full overflow-hidden carousel"&gt;
    &lt;div class="box-border flex flex-none w-full carousel-item snap-start" id="slide-1"&gt;
        &lt;img class="w-full h-[17.625rem] xl:h-[13.4375rem] 2lg:h-60 sm:h-36 2sm:h-32" src="../../assets/images/carousel/2.jpg" alt="butterfly"&gt;
    &lt;/div&gt;
@@ -1325,8 +1325,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-6" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code>&lt;div class="w-full overflow-hidden carousel"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="w-full overflow-hidden carousel"&gt;
    &lt;div class="box-border flex flex-none w-full carousel-item snap-start" id="slide-1"&gt;
        &lt;img class="w-full h-[17.625rem] xl:h-[13.4375rem] 2lg:h-60 sm:h-36 2sm:h-32" src="../../assets/images/carousel/4.jpg" alt="tree"&gt;
    &lt;/div&gt;
@@ -1386,8 +1386,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-6" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code>&lt;div class="w-full overflow-hidden carousel"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="w-full overflow-hidden carousel"&gt;
    &lt;div class="box-border relative flex flex-none w-full carousel-item snap-start" id="slider1"&gt;
       &lt;img class="w-full h-[17.625rem] xl:h-[13.4375rem] 2lg:h-60 sm:h-36 2sm:h-32" src="../../assets/images/carousel/3.jpg" alt="sky view"&gt;
       &lt;div class="absolute flex justify-between transform left-5 right-5 text-white -translate-y-1/2 top-1/2 lg:left-2.5 lg:right-2.5"&gt;
@@ -1469,8 +1469,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-6" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code>&lt;div class="w-60 h-72 carousel sm:w-52 sm:h-72"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="w-60 h-72 carousel sm:w-52 sm:h-72"&gt;
    &lt;div class="h-full carousel-item"&gt;
     &lt;img class="w-full" src="../../assets/images/carousel/6.jpg" alt="night view"&gt;
    &lt;/div&gt;
