--- a/html/template/pagination.html
+++ b/html/template/pagination.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="sticky top-0 z-[4]">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] sm:py-[17px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -1153,8 +1153,8 @@
                     </div>
                   </div>
                   <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                    <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                    <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="overflow-auto custom-scroll"&gt;
+                    <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                    <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
   &lt;div class="flex"&gt;
       &lt;button class="border rounded-none btn border-border-light text-title hover:bg-primary hover:text-white"&gt; 1 &lt;/button&gt;
       &lt;button class="text-white border rounded-none btn btn-active border-border-light bg-primary hover:bg-primary hover:text-white"&gt; 2 &lt;/button&gt;
@@ -1194,8 +1194,8 @@
                     </div>
                   </div>
                   <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                    <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                    <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="overflow-auto custom-scroll"&gt;
+                    <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                    <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
    &lt;div class="flex"&gt;
        &lt;button class="border rounded-none btn border-border-light text-title hover:bg-primary hover:text-white"&gt; 1 &lt;/button&gt;
        &lt;button class="border rounded-none btn border-border-light text-title hover:bg-primary hover:text-white"&gt; 2 &lt;/button&gt;
@@ -1242,8 +1242,8 @@
                     </div>
                   </div>
                   <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                    <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                    <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="overflow-auto custom-scroll"&gt;
+                    <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                    <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
    &lt;div class="flex"&gt;
        &lt;button class="border rounded-none btn border-border-light hover:bg-primary group"&gt;
           +SVG_ICON("Arrow-Left-2" ,"w-[0.875rem] h-[0.875rem] stroke-title group-hover:stroke-white")
@@ -1286,8 +1286,8 @@
                     </div>
                   </div>
                   <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                    <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                    <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="overflow-auto custom-scroll"&gt;
+                    <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                    <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
    &lt;div class="flex"&gt;
        &lt;button class="border rounded-none btn border-border-light text-title hover:bg-primary hover:text-white"&gt; Preview &lt;/button&gt;
        &lt;button class="border rounded-none btn border-border-light text-title hover:bg-primary hover:text-white"&gt; 1 &lt;/button&gt;
@@ -1326,8 +1326,8 @@
                     </div>
                   </div>
                   <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                    <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                    <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="overflow-auto custom-scroll"&gt;
+                    <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                    <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
    &lt;div class="flex"&gt;
        &lt;button class="border rounded-none btn border-border-light text-title hover:border-primary hover:text-primary"&gt; 1 &lt;/button&gt;
        &lt;button class="border rounded-none btn border-border-light text-title hover:border-primary hover:text-primary"&gt; 2 &lt;/button&gt;
@@ -1373,8 +1373,8 @@
                     </div>
                   </div>
                   <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                    <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                    <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="overflow-auto custom-scroll"&gt;
+                    <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                    <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
    &lt;div class="flex"&gt;
       &lt;button class="flex items-center gap-1 border rounded-none btn border-border-light hover:bg-primary group hover:text-white"&gt; 
           +SVG_ICON("Arrow-Left-2" ,"w-[0.875rem] h-[0.875rem] stroke-title group-hover:stroke-white") Preview 
@@ -1443,8 +1443,8 @@
                     </div>
                   </div>
                   <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                    <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                    <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="overflow-auto custom-scroll"&gt;
+                    <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                    <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
   &lt;div class="flex flex-col gap-2"&gt;
      &lt;div class="flex"&gt;
          &lt;button class="border rounded-none btn btn-xs border-border-light text-title hover:bg-primary hover:text-white"&gt; 1 &lt;/button&gt;
@@ -1541,8 +1541,8 @@
                     </div>
                   </div>
                   <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                    <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                    <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="overflow-auto custom-scroll"&gt;
+                    <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                    <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
   &lt;div class="flex flex-col gap-2"&gt;
      &lt;div class="flex justify-start"&gt;
          &lt;button class="border rounded-none btn border-border-light text-title hover:bg-info hover:text-white"&gt; 1 &lt;/button&gt;
