--- a/html/template/tabs.html
+++ b/html/template/tabs.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="sticky top-0 z-[4]">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] sm:py-[17px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -1161,8 +1161,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
   &lt;div class="w-full .tabs flex-col"&gt;
       &lt;div class="flex mb-1 tab-links"&gt;
           &lt;button class="tab tab-lifted tab-active tab-link" data-tabFilter="1"&gt; Title 1 &lt;/button&gt;
@@ -1220,8 +1220,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="flex-col w-full tabs"&gt;
       &lt;div class="flex mb-1 tab-links"&gt;
           &lt;button class="tab tab-lifted rounded-bg tab-link" data-tabFilter="1"&gt; Description 1 &lt;/button&gt;
@@ -1280,8 +1280,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
   &lt;div class="flex-col w-full tabs"&gt;
       &lt;div class="flex mb-1 tab-links"&gt;
           &lt;button class="tab tabs-bordered warning-border tab-active tab-link" data-tabFilter="1"&gt; Title &lt;/button&gt;
@@ -1344,8 +1344,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="flex-col w-full tabs"&gt;
       &lt;div class="flex mb-1 tab-links"&gt;
           &lt;button class="tab tab-boxed tab-active tab-link" data-tabFilter="1"&gt;Home &lt;/button&gt;
@@ -1408,8 +1408,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="flex w-full sm:block tabs"&gt;
       &lt;div class="mb-1 flex flex-col justify-center tab-links min-w-[8.125rem]"&gt;
           &lt;button class="tab tab-vertical tab-active tab-link" data-tabFilter="1"&gt; Home &lt;/button&gt;
@@ -1472,8 +1472,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
   &lt;div class="flex w-full sm:block tabs"&gt;
       &lt;div class="mb-1 flex flex-col justify-center min-w-[8.125rem] tab-links"&gt;
           &lt;button class="tab tab-boxed secondary-boxed tab-active tab-link" data-tabFilter="1"&gt; Home &lt;/button&gt;
@@ -1536,8 +1536,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="flex-col w-full tabs"&gt;
       &lt;div class="flex justify-center mb-1 tab-links"&gt;
           &lt;button class="tab tabs-bordered tab-active tab-link" data-tabFilter="1"&gt; Dark &lt;/button&gt;
@@ -1601,8 +1601,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
   &lt;div class="flex-col w-full tabs"&gt;
       &lt;div class="flex justify-end mb-1 tab-links 2sm:justify-center"&gt;
           &lt;button class="tab tab-boxed success-boxed tab-active tab-link" data-tabFilter="1"&gt; Product &lt;/button&gt;
@@ -1667,8 +1667,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
   &lt;div class="flex-col w-full tabs"&gt;
       &lt;div class="flex mb-1 tab-links"&gt;
           &lt;button class="tab tabs-bordered tabs-bordered-bg tab-active tab-link" data-tabFilter="1"&gt; Products &lt;/button&gt;
@@ -1743,8 +1743,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
   &lt;div class="flex-col w-full tabs"&gt;
       &lt;div class="flex mb-1 tab-links"&gt;
           &lt;button class="tab tabs-bordered tabs-bordered-bg secondary-bg tab-active tab-link" data-tabFilter="1"&gt;
