--- a/assets/pug/layout/header/header.pug
+++ b/assets/pug/layout/header/header.pug
@@ -1,5 +1,5 @@
 // Page Header start
-header.fixed.top-0(class="z-[4] 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto")
+header.sticky.top-0(class="z-[4]")
   div.page-header(class="w-full transition-all bg-white shadow-header dark:bg-sidebar-dark")
     div(class="py-[11px] sm:py-[17px] flex items-center xl:relative justify-between px-body-space")
       div.left-header.flex.items-center.gap-2
