--- a/assets/pug/pages/template/avatars.pug
+++ b/assets/pug/pages/template/avatars.pug
@@ -66,10 +66,10 @@ html(lang='en')
                           div.w-16.rounded
                             img(src="../../assets/images/avatar/20.jpg" alt="avatar")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
                           |    &lt;div class="avatar"&gt;
                           |     &lt;div class="rounded w-28"&gt;
@@ -120,10 +120,10 @@ html(lang='en')
                           div.w-16 
                             img(src="../../assets/images/avatar/20.jpg" alt="avatar")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
                           |    &lt;div class="rounded-none avatar"&gt;
                           |     &lt;div class="w-28 "&gt;
@@ -178,10 +178,10 @@ html(lang='en')
                             img(class="rounded-full" src="../../assets/images/avatar/20.jpg" alt="avatar")
                             div.status-dnd
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
                           |    &lt;div class="avatar"&gt;
                           |     &lt;div class="relative overflow-visible rounded w-28"&gt;
@@ -254,10 +254,10 @@ html(lang='en')
                             div.w-12
                               img(src='../../assets/images/avatar/20.jpg' alt='avatar')
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
                           |    &lt;div class="items-center justify-center avatar-group"&gt;
                           |     &lt;div class="border-white avatar rounded-xl"&gt;
@@ -355,10 +355,10 @@ html(lang='en')
                             div.w-12
                               span.text-xs.font-bold  26+
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
                           |    &lt;div class="items-center justify-center avatar-group"&gt;
                           |     &lt;div class="border-white  rounded-none avatar"&gt;
@@ -446,10 +446,10 @@ html(lang='en')
                             img(class="rounded-full" src="../../assets/images/avatar/20.jpg" alt="avatar")
                             div.status-offline.animate-ping
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
                           |    &lt;div class="avatar"&gt;
                           |      &lt;div class="relative overflow-visible rounded w-14"&gt;
@@ -511,10 +511,10 @@ html(lang='en')
                           div.w-9.rounded.flex.justify-center.items-center.bg-gray-light(class="dark:text-sidebar-dark")
                             span.text-sm  Y
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
                           |    &lt;div class="inline-flex avatar"&gt;
                           |     &lt;div class="flex items-center justify-center rounded w-14 bg-gray-light dark:text-sidebar-dark"&gt;
@@ -571,10 +571,10 @@ html(lang='en')
                           div
                             +SVG_ICON("Notification","w-[3.125rem] h-[3.125rem] stroke-white bg-warning p-2") 
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
                           |    &lt;div class="avatar"&gt;
                           |     &lt;div&gt;
