--- a/assets/pug/pages/template/button.pug
+++ b/assets/pug/pages/template/button.pug
@@ -61,10 +61,10 @@ html(lang='en')
                         button.btn.btn-danger.text-white(class="hover:-translate-y-1 hover:transition-all hover:ease-in-out") Danger
                         button.btn.btn-light.text-title(class="hover:-translate-y-1 hover:transition-all hover:ease-in-out") Light 
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt; 
                           |    &lt;button class="text-white btn btn-primary hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Primary&lt;/button&gt; 
                           |    &lt;button class="text-white btn btn-secondary hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Secondary&lt;/button&gt;
@@ -97,10 +97,10 @@ html(lang='en')
                         button.btn.btn-active.btn-danger.text-white(class="hover:-translate-y-1 hover:transition-all hover:ease-in-out") Danger
                         button.btn.btn-active.btn-light.text-title(class="hover:-translate-y-1 hover:transition-all hover:ease-in-out") Light
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt; 
                           |    &lt;button class="text-white btn btn-active btn-primary hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Primary&lt;/button&gt; 
                           |    &lt;button class="text-white btn btn-active btn-secondary hover:-translate-y-1 hover:transition-all hover:ease-in-out"&gt;Secondary&lt;/button&gt;
@@ -133,10 +133,10 @@ html(lang='en')
                         button.btn.btn-outline.btn-danger(class="dark:bg-sidebar-dark") Danger
                         button.btn.btn-outline.btn-light(class="dark:bg-sidebar-dark") Light
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt;
                           |    &lt;button class="btn btn-outline btn-primary dark:bg-sidebar-dark"&gt;Primary&lt;/button&gt; 
                           |    &lt;button class="btn btn-outline btn-secondary dark:bg-sidebar-dark"&gt;Secondary&lt;/button&gt;
@@ -169,10 +169,10 @@ html(lang='en')
                         input.btn.btn-success.text-white(type="button" value="Button")  
                         input.btn.btn-warning.text-white(type="reset" value="Reset")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt; 
                           |    &lt;a class="text-white btn btn-primary" href="javascript:void(0)" role="button"&gt;Link&lt;/a&gt; 
                           |    &lt;button class="text-white btn btn-secondary"&gt;Button&lt;/button&gt;
@@ -201,10 +201,10 @@ html(lang='en')
                         button.btn.btn-outline.btn-primary.btn-sm.text-primary(class="dark:bg-sidebar-dark") Small
                         button.btn.btn-outline.btn-primary.btn-xs.text-primary(class="dark:bg-sidebar-dark") Ex-small 
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt; 
                           |    &lt;button class="btn btn-outline btn-success btn-lg.text-primary"&gt;Large&lt;/button&gt;
                           |    &lt;button class="btn btn-outline btn-info btn-md.text-primary"&gt;Medium&lt;/button&gt;
@@ -236,10 +236,10 @@ html(lang='en')
                         button.btn.btn-outline.btn-success.btn-square.h-14.w-14.group(class="dark:bg-sidebar-dark")
                           i(data-feather="x" class="w-4 h-4 stroke-success group-hover:stroke-white")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt; 
                           |    &lt;button class="btn btn-warning btn-rounded h-14 w-14"&gt; &lt;i class="w-4 h-4 stroke-white"&gt; &lt;/i&gt;  &lt;/button&gt; 
                           |    &lt;button class="btn btn-outline btn-warning btn-rounded h-14 w-14"&gt; &lt;i class="w-4 h-4 stroke-warning group-hover:stroke-white"&gt; &lt;/i&gt;  &lt;/button&gt;
@@ -263,13 +263,13 @@ html(lang='en')
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2
-                        button.btn.btn-primary(disabled="disabled") Disabled attribute
-                        button.btn.btn-secondary.btn-disabled.cursor-auto Disabled class
+                        button.btn.btn-primary(disabled="disabled" class="dark:bg-sidebar-dark2") Disabled attribute
+                        button.btn.btn-secondary.btn-disabled.cursor-auto(class="dark:bg-sidebar-dark2") Disabled class
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt; 
                           |    &lt;button class="btn btn-primary" disabled="disabled"&gt;disabled attribute&lt;/button&gt; 
                           |    &lt;button class="cursor-auto btn btn-secondary btn-disabled"&gt;disabled class&lt;/button&gt;
@@ -296,10 +296,10 @@ html(lang='en')
                           |   Wishlist   
                           +SVG_ICON("Heart","w-[1.125rem] h-[1.125rem] stroke-white")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt; 
                           |    &lt;button class="flex items-center justify-center gap-2 text-white btn btn-secondary"&gt;
                           |       +SVG_ICON("Heart","w-[1.125rem] h-[1.125rem] stroke-white")Likes
@@ -335,10 +335,10 @@ html(lang='en')
                             span.sr-only
                           | loading
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt;
                           |    &lt;button class="btn btn-primary"&gt;
                           |      &lt;div role="status"&gt;
@@ -370,10 +370,10 @@ html(lang='en')
                       div.flex.flex-wrap.gap-2
                         button.btn.btn-primary.block.w-full.text-white Button block
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white")
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt;
                           |    &lt;button class="block w-full text-white btn btn-primary"&gt;Button block&lt;/button&gt;
                           |&lt;/div&gt;
@@ -393,17 +393,17 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2
                         div.inline-flex.rounded-none.flex-wrap
-                          button.py-2.px-3.text-sm.font-medium.text-white.bg-primary.rounded-none.border.border-gray-200(class='hover:bg-primary hover:text-white focus:text-white focus:bg-primary')
+                          button.py-2.px-3.text-sm.font-medium.text-white.bg-primary.rounded-none.border.border-gray-200(class='hover:bg-primary hover:text-white focus:text-white focus:bg-primary ' )
                             | Profile
-                          button.py-2.px-3.text-sm.font-medium.text-gray-900.bg-white.rounded-none.border-t.border-b.border-gray-200(class='hover:bg-primary hover:text-white focus:text-white focus:bg-primary')
+                          button.py-2.px-3.text-sm.font-medium.text-gray-900.bg-white.rounded-none.border-t.border-b.border-gray-200(class='hover:bg-primary hover:text-white focus:text-white focus:bg-primary' )
                             | Setting
-                          button.py-2.px-3.text-sm.font-medium.text-gray-900.bg-white.rounded-none.border.border-gray-200(class='hover:bg-primary hover:text-white focus:text-white focus:bg-primary')
+                          button.py-2.px-3.text-sm.font-medium.text-gray-900.bg-white.rounded-none.border.border-gray-200(class='hover:bg-primary hover:text-white focus:text-white focus:bg-primary' )
                             | Message
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white") 
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white") 
                         i(data-feather="clipboard")
-                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark")
-                        code(class="dark:bg-sidebar-dark")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt;
                           |    &lt;button class="px-3 py-2 text-sm font-medium text-white border border-gray-200 rounded-none bg-primary hover:bg-primary hover:text-white focus:text-white focus:bg-primary"&gt;Profile&lt;/button&gt;
                           |    &lt;button class="px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-none hover:bg-primary hover:text-white focus:text-white focus:bg-primary"&gt;Setting&lt;/button&gt;
