--- a/html/template/avatars.html
+++ b/html/template/avatars.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="sticky top-0 z-[4]">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] sm:py-[17px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -1158,8 +1158,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="avatar"&gt;
     &lt;div class="rounded w-28"&gt;
       &lt;img src="../../image.jpg" alt="avatar"/&gt;
@@ -1217,8 +1217,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="rounded-none avatar"&gt;
     &lt;div class="w-28 "&gt;
       &lt;img src="../../image.jpg" alt="avatar"/&gt;
@@ -1284,8 +1284,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="avatar"&gt;
     &lt;div class="relative overflow-visible rounded w-28"&gt;
       &lt;img src="../../image.jpg" alt="avatar"/&gt;
@@ -1368,8 +1368,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="items-center justify-center avatar-group"&gt;
     &lt;div class="border-white avatar rounded-xl"&gt;
      &lt;div class="w-24"&gt;
@@ -1477,8 +1477,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="items-center justify-center avatar-group"&gt;
     &lt;div class="border-white  rounded-none avatar"&gt;
      &lt;div class="w-24"&gt;
@@ -1578,8 +1578,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="avatar"&gt;
      &lt;div class="relative overflow-visible rounded w-14"&gt;
        &lt;img src="../../image.jpg" alt="avatar"/&gt;
@@ -1650,8 +1650,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="inline-flex avatar"&gt;
     &lt;div class="flex items-center justify-center rounded w-14 bg-gray-light dark:text-sidebar-dark"&gt;
       &lt;span class="text-3xl"&gt; B &lt;/span&gt;
@@ -1737,8 +1737,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark2 dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark"><code class="dark:bg-sidebar-dark">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="avatar"&gt;
     &lt;div&gt;
       +SVG_ICON("Heart","w-[3.125rem] h-[3.125rem] 
