--- a/html/template/breadcrumb.html
+++ b/html/template/breadcrumb.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="sticky top-0 z-[4]">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] sm:py-[17px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -1150,9 +1150,9 @@
                                   <svg class="stroke-primary"> 
                                     <use href="../../assets/svg/sprite.svg#Home"> </use>
                                   </svg></a></li>
-                              <li class="px-2"> <span>/</span></li>
+                              <li class="px-2"><span>/</span></li>
                               <li class="breadcrumb-items capitalize">Bonus Ui </li>
-                              <li class="px-2"> <span>/</span></li>
+                              <li class="px-2"><span>/</span></li>
                               <li class="breadcrumb-items capitalize font-light active">Breadcrumb</li>
                             </ol>
                           </nav>
@@ -1160,8 +1160,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="overflow-auto custom-scroll"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
    &lt;div class="breadcrumb"&gt;
     &lt;nav&gt;
      &lt;ol class="flex items-center breadcrumb-list"&gt;
@@ -1219,8 +1219,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="overflow-auto custom-scroll"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
    &lt;div class="breadcrumb-2 breadcrumb-style-3"&gt;
     &lt;nav class="w-full text-primary"&gt;
      &lt;ol class="flex items-center breadcrumb-list"&gt;
@@ -1301,8 +1301,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="overflow-auto custom-scroll"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
    &lt;div class="breadcrumb"&gt;
     &lt;nav&gt;
      &lt;ol class="flex items-center breadcrumb-list"&gt;
@@ -1381,8 +1381,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="overflow-auto custom-scroll"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
    &lt;div class="breadcrumb breadcrumb-style-4"&gt;
     &lt;nav&gt;
      &lt;ol class="flex items-center breadcrumb-list"&gt;
@@ -1448,8 +1448,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="overflow-auto custom-scroll"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
    &lt;div class="breadcrumb breadcrumb-style-3"&gt;
     &lt;nav&gt;
      &lt;ol class="flex items-center breadcrumb-list"&gt;
