--- a/html/template/divider.html
+++ b/html/template/divider.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="sticky top-0 z-[4]">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] sm:py-[17px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -1139,7 +1139,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body">                                  
+                <div class="card-body">
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-col w-full gap-2 items-center">
@@ -1149,8 +1149,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-col w-full gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-col w-full gap-2"&gt;
    &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full"&gt; content &lt;/div&gt; 
    &lt;div class="divider"&gt; OR &lt;/div&gt; 
    &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full"&gt; content &lt;/div&gt; 
@@ -1182,8 +1182,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-col w-full gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-col w-full gap-2"&gt;
    &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full"&gt; content &lt;/div&gt; 
    &lt;div class="divider before:w-full after:w-0"&gt; OR &lt;/div&gt; 
    &lt;div class="grid h-20 w-[40%] card rounded-box place-items-center bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full"&gt; content &lt;/div&gt; 
@@ -1215,8 +1215,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex w-full gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex w-full gap-2"&gt;
    &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full"&gt; content &lt;/div&gt; 
    &lt;div class="w-auto divider horizontal"&gt; OR &lt;/div&gt; 
    &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] sm:w-full"&gt; content &lt;/div&gt; 
@@ -1248,8 +1248,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex w-full gap-2 lg:flex-col"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex w-full gap-2 lg:flex-col"&gt;
    &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full"&gt; content &lt;/div&gt; 
    &lt;div class="divider min-lg:w-auto min-lg:horizontal lg:w-full md:w-[40%] sm:w-full"&gt; OR &lt;/div&gt; 
    &lt;div class="grid h-20 card rounded-box place-items-center w-9/12 bg-[#E5E6E6] bg-opacity-[0.45] lg:w-full"&gt; content &lt;/div&gt; 
