--- a/html/template/indicator.html
+++ b/html/template/indicator.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="sticky top-0 z-[4]">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] sm:py-[17px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -1144,16 +1144,16 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
                         <div class="indicator mt-2"><span class="offline-status"></span>
-                          <div class="grid bg-gray-light text-title w-28 h-20 place-content-center p-2">Centent Box</div>
+                          <div class="dark:bg-sidebar-dark2 grid bg-gray-light text-title w-28 h-20 place-content-center p-2">Centent Box</div>
                         </div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code> &lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="mt-2 indicator"&gt;
       &lt;span class="offline-status"&gt;&lt;/span&gt;
-      &lt;div class="grid p-2 bg-gray-light text-title w-28 h-28 place-content-center"&gt; Content Box &lt;/div&gt;
+      &lt;div class="dark:bg-sidebar-dark2 grid p-2 bg-gray-light text-title w-28 h-28 place-content-center"&gt; Content Box &lt;/div&gt;
    &lt;/div&gt; 
 &lt;/div&gt;</code></pre>
                     </div>
@@ -1178,16 +1178,16 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
                         <div class="indicator mt-2"><span class="active-status"></span>
-                          <div class="grid bg-gray-light text-title w-20 h-20 place-content-center rounded-full">Avatar</div>
+                          <div class="dark:bg-sidebar-dark2 grid bg-gray-light text-title w-20 h-20 place-content-center rounded-full">Avatar</div>
                         </div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code> &lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="mt-2 indicator"&gt;
       &lt;span class="active-status"&gt;&lt;/span&gt;
-      &lt;div class="grid rounded-full bg-gray-light text-title w-28 h-28 place-content-center"&gt; Avatar &lt;/div&gt;
+      &lt;div class="dark:bg-sidebar-dark2 grid rounded-full bg-gray-light text-title w-28 h-28 place-content-center"&gt; Avatar &lt;/div&gt;
    &lt;/div&gt; 
 &lt;/div&gt;</code></pre>
                     </div>
@@ -1212,13 +1212,13 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
                         <div class="indicator mt-2"><span class="indicator-item badge bg-secondary text-white rounded-full top-[-0.9375rem] right-[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset !py-1 !px-2">Update</span>
-                          <div class="grid bg-gray-light text-title w-28 h-20 place-content-center p-2">Latest</div>
+                          <div class="dark:bg-sidebar-dark2 grid bg-gray-light text-title w-28 h-20 place-content-center p-2">Latest</div>
                         </div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code> &lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="mt-2 indicator"&gt;
       &lt;span class="indicator-item badge bg-secondary text-white rounded-full top-[-0.9375rem] right-[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset !py-1 !px-2"&gt; Update &lt;/span&gt;
       &lt;div class="grid h-20 p-2 bg-gray-light text-title w-28 place-content-center"&gt; Latest Version &lt;/div&gt;
@@ -1252,8 +1252,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code> &lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="mt-2 indicator"&gt;
       &lt;span class="indicator-item active-process"&gt; Typing.. &lt;/span&gt;
       &lt;div class="w-12 rounded"&gt;
@@ -1282,16 +1282,16 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
-                        <div class="indicator mt-2"><span class="indicator-item badge bg-white border-2 shadow-lg text-title rounded-full top-[-0.9375rem] right-[-1.25rem] rtl:right-unset rtl:left-[-1.25rem] !py-1 !px-2 !border-gray-light">+99</span>
+                        <div class="indicator mt-2"><span class="indicator-item badge bg-white border-2 shadow-lg text-title rounded-full dark:bg-sidebar-dark2 top-[-0.9375rem] right-[-1.25rem] rtl:right-unset rtl:left-[-1.25rem] !py-1 !px-2 !border-gray-light">+99</span>
                           <button class="btn btn-info text-white">Notification</button>
                         </div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code> &lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="mt-2 indicator"&gt;
-      &lt;span class="indicator-item badge bg-white border-2 !border-gray-light shadow-lg text-title rounded-full top-[-0.9375rem] right-[-1.25rem] rtl:right-unset rtl:left-[-1.25rem] !py-1 !px-2"&gt; +99 &lt;/span&gt;
+      &lt;span class="dark:bg-sidebar-dark2 indicator-item badge bg-white border-2 !border-gray-light shadow-lg text-title rounded-full top-[-0.9375rem] right-[-1.25rem] rtl:right-unset rtl:left-[-1.25rem] !py-1 !px-2"&gt; +99 &lt;/span&gt;
       &lt;button class="text-white btn btn-info"&gt; Notification &lt;/button&gt;
    &lt;/div&gt; 
 &lt;/div&gt;</code></pre>
@@ -1326,8 +1326,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code> &lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="indicator"&gt;
       &lt;button class="flex items-center justify-center gap-1 text-white btn btn-success"&gt; GOVO 
           +SVG_ICON("Arrow-Right-2","h-5 w-5 stroke-white")
@@ -1356,13 +1356,13 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
                         <div class="indicator mt-2"><span class="indicator-item badge bg-secondary text-white rounded-full top-[-0.9375rem] right-[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset !py-1 !px-2">Required</span>
-                          <input class="bg-gray-light rounded-5 w-full py-[0.6875rem] pl-[1.5625rem] sm:pl-[0.625rem] pr-[3.4375rem] sm:pr-0 text-xs font-semibold text-title" type="email" placeholder="Enter your id..">
+                          <input class="bg-gray-light rounded-5 w-full py-[0.6875rem] pl-[1.5625rem] sm:pl-[0.625rem] pr-[3.4375rem] sm:pr-0 text-xs font-semibold text-title dark:bg-sidebar-dark2" type="email" placeholder="Enter your id..">
                         </div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code> &lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="mt-2 indicator"&gt;
       &lt;span class="indicator-item badge bg-secondary text-white rounded-full top-[10.9375rem] right[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset !py-1 !px-2"&gt; Required &lt;/span&gt;
       &lt;input type="email" placeholder="Enter your id.." class="bg-gray-light rounded-5 w-full py-[0.6875rem] pl-[1.5625rem] pr-[3.4375rem] text-xs font-semibold text-title"&gt;
@@ -1397,8 +1397,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code> &lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="flex mb-1"&gt;
       &lt;button class="tab tab-bordered tabs-bordered-bg data-tabFilter="1" tab-link"&gt; Title &lt;/button&gt;
       &lt;button class="indicator mt-2 tab tab-bordered tabs-bordered-bg tab-active data-tabFilter="2" tab-link"&gt; Description &lt;/button&gt;
@@ -1433,8 +1433,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code>&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="indicator"&gt;
       &lt;span class="flex items-center justify-center gap-2 text-white rounded btn bg-secondary"&gt; Add Wishlist &lt;/span&gt;
       &lt;i data-feather="heart" class="stroke-white sm:h-[1.125rem] sm:w-[1.125rem] fill-white"&gt;
@@ -1463,7 +1463,7 @@
                       <div class="flex flex-wrap gap-2">
                         <div class="indicator mb-2">
                           <p class="indicator-item badge bg-primary font-bold text-white !rounded-card bottom-[-0.625rem] right-[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset sm:top-[-0.625rem] sm:right-[-0.9375rem] sm:bottom-unset !py-1 !px-2 border-none">Apply!!</p>
-                          <div class="card bg-gray-light"> 
+                          <div class="card bg-gray-light dark:bg-sidebar-dark2">
                             <div class="card-body text-title">
                               <h3 class="text-lg font-bold">Ready for job?</h3>
                               <p class="font-normal">Here, you can find more and more</p>
@@ -1473,8 +1473,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code> &lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="mb-2 indicator"&gt;
       &lt;span class="indicator-item badge bg-primary font-bold text-white !rounded-card bottom-[-0.625rem] right-[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset !py-1 !px-2 border-none"&gt; GOVO &lt;/span&gt;
          &lt;div class="card bg-gray-light"&gt;
@@ -1512,8 +1512,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"> <code> &lt;div class="flex flex-wrap gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="indicator"&gt;
       &lt;span class="indicator-item img-indicator badge bg-info text-white !py-1 !px-2 border-none"&gt; Uploading..!! &lt;/span&gt;
       &lt;div class="avatar rounded w-64 h-[5.5rem]"&gt;
