--- a/html/template/radial-progress.html
+++ b/html/template/radial-progress.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="sticky top-0 z-[4]">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] sm:py-[17px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -1143,12 +1143,12 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex items-center justify-center flex-wrap gap-4">
-                        <div class="radial-progress text-primary" style="--value:70;">70% </div>
+                        <div class="radial-progress text-primary dark:bg-sidebar-dark2" style="--value:70;">70% </div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2"> &lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
    &lt;div class="radial-progress text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
 &lt;/div&gt;</code></pre>
                     </div>
@@ -1172,22 +1172,22 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex items-center justify-center flex-wrap gap-4">
-                        <div class="radial-progress" style="--value:0;">0% </div>
-                        <div class="radial-progress" style="--value:15;">15% </div>
-                        <div class="radial-progress" style="--value:40;">40% </div>
-                        <div class="radial-progress" style="--value:65;">65%</div>
-                        <div class="radial-progress" style="--value:95;">95%</div>
+                        <div class="radial-progress dark:bg-sidebar-dark2" style="--value:0; ">0% </div>
+                        <div class="radial-progress dark:bg-sidebar-dark2" style="--value:15;">15% </div>
+                        <div class="radial-progress dark:bg-sidebar-dark2" style="--value:40;">40% </div>
+                        <div class="radial-progress dark:bg-sidebar-dark2" style="--value:65;">65%</div>
+                        <div class="radial-progress dark:bg-sidebar-dark2" style="--value:95;">95%</div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
-   &lt;div class="radial-progress" style="--value:0;"&gt; 0% &lt;/div&gt;
-   &lt;div class="radial-progress" style="--value:15;"&gt; 15% &lt;/div&gt;
-   &lt;div class="radial-progress" style="--value:40;"&gt; 40% &lt;/div&gt;
-   &lt;div class="radial-progress" style="--value:65;"&gt; 65% &lt;/div&gt;
-   &lt;div class="radial-progress" style="--value:95;"&gt; 95% &lt;/div&gt;
-&lt;/div&gt;</code></pre>
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
+   &lt;div class="radial-progress" style="--value:0;  class="dark:bg-sidebar-dark2 "&gt; 0% &lt;/div&gt;
+   &lt;div class="radial-progress" style="--value:15; class="dark:bg-sidebar-dark2 "&gt; 15% &lt;/div&gt;
+   &lt;div class="radial-progress" style="--value:40; class="dark:bg-sidebar-dark2 "&gt; 40% &lt;/div&gt;
+   &lt;div class="radial-progress" style="--value:65; class="dark:bg-sidebar-dark2 "&gt; 65% &lt;/div&gt;
+   &lt;div class="radial-progress" style="--value:95; class="dark:bg-sidebar-dark2 "&gt; 95% &lt;/div&gt;
+&lt;/div&gt; </code></pre>
                     </div>
                   </div>
                 </div>
@@ -1217,8 +1217,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
    &lt;div class="radial-progress radial-sm text-primary" style="--value:5;"&gt; 5% &lt;/div&gt;
    &lt;div class="radial-progress radial-sm text-secondary" style="--value:25;"&gt; 25% &lt;/div&gt;
    &lt;div class="radial-progress radial-sm text-info" style="--value:57;"&gt; 57% &lt;/div&gt;
@@ -1267,8 +1267,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
    &lt;div class="flex flex-col items-center justify-center gap-2 text-primary"&gt;
        &lt;div class="radial-progress bg-gray-light" style="--value:5;"&gt;&lt;/div&gt;
        &lt;span&gt; 5% &lt;/span&gt;
@@ -1323,8 +1323,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center justify-center gap-2"&gt;
    &lt;div class="radial-progress radial-xs text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
    &lt;div class="radial-progress radial-sm text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
    &lt;div class="radial-progress radial-md text-primary" style="--value:70;"&gt; 70% &lt;/div&gt;
