--- a/html/template/swap.html
+++ b/html/template/swap.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="sticky top-0 z-[4]">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] sm:py-[17px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -1151,8 +1151,8 @@
                     </div>
                   </div>
                   <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                    <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                    <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="flex items-center justify-center gap-5"&gt;
+                    <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                    <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex items-center justify-center gap-5"&gt;
    &lt;label class="swap"&gt;
        &lt;input type="checkbox" class="mb-0.5"&gt;
        &lt;span class="text-xl text-primary font-bold swap-on mb-[-0.375rem]"&gt;ON&lt;/span&gt; 
@@ -1207,8 +1207,8 @@
                     </div>
                   </div>
                   <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                    <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                    <pre class="overflow-auto language-html custom-scroll"><code> &lt;div class="flex items-center justify-center gap-5"&gt;     
+                    <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                    <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2"> &lt;div class="flex items-center justify-center gap-5"&gt;     
    &lt;label class="swap"&gt;
        &lt;input class="mb-0.5" type="checkbox"&gt;
        &lt;span class="text-3xl swap-on mb-[-0.3125rem]"&gt;&lt;i data-feather="sun"&gt;&lt;/i&gt;&lt;/span&gt;
@@ -1250,8 +1250,8 @@
                     </div>
                   </div>
                   <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                    <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                    <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="text-center"&gt;
+                    <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                    <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="text-center"&gt;
    &lt;label class="swap swap-flip text-[3.125rem]"&gt;
        &lt;input class="mb-0.5" type="checkbox"&gt;
        &lt;span class="text-3xl swap-on mb-[-0.5rem]"&gt;😈&lt;/span&gt;
@@ -1283,8 +1283,8 @@
                     </div>
                   </div>
                   <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                    <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                    <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="text-center"&gt;
+                    <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                    <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="text-center"&gt;
    &lt;label class="swap swap-rotate"&gt;
        &lt;input type="checkbox" class="mb-0.5"&gt;
        &lt;span class="swap-on mb-[-0.25rem]"&gt; img(src='../../assets/images/icons/Like.svg' alt='like icon') &lt;/span&gt;
