--- a/html/template/swiper-slider.html
+++ b/html/template/swiper-slider.html
@@ -26,7 +26,7 @@
     <main class="page-wrapper">
       <div class="page-body-wrapper 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300">
         <!-- Page Header start-->
-        <header class="fixed top-0 z-[4] 2xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto">
+        <header class="sticky top-0 z-[4]">
           <div class="page-header w-full transition-all bg-white shadow-header dark:bg-sidebar-dark">
             <div class="py-[11px] sm:py-[17px] flex items-center xl:relative justify-between px-body-space">
               <div class="left-header flex items-center gap-2">
@@ -1155,8 +1155,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="swiper defaultSlider"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="swiper defaultSlider"&gt;
   &lt;div class="swiper-wrapper"&gt;
       &lt;div class="swiper-slide"&gt;
           img(class="w-full h-[17.625rem] xl:h-[13.4375rem]  lg:h-80 sm:h-52 2sm:h-44" src="../../assets/images/carousel/1.jpg" alt="nature")
@@ -1224,8 +1224,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="swiper sliderPagination"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="swiper sliderPagination"&gt;
   &lt;div class="swiper-wrapper"&gt;  
       &lt;div class="swiper-slide"&gt;
           img(class="w-full h-[17.625rem] xl:h-[13.4375rem]  lg:h-80 sm:h-52 2sm:h-44" src="../../assets/images/carousel/3.jpg" alt="sky view")
@@ -1286,8 +1286,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="swiper sliderPaginationFraction"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="swiper sliderPaginationFraction"&gt;
   &lt;div class="swiper-wrapper"&gt;
       &lt;div class="swiper-slide"&gt;
           img(class="w-full h-[17.625rem] xl:h-[13.4375rem]  lg:h-80 sm:h-52 2sm:h-44" src="../../assets/images/carousel/2.jpg" alt="butterfly")
@@ -1347,8 +1347,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="swiper sliderPaginationCustom"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="swiper sliderPaginationCustom"&gt;
   &lt;div class="swiper-wrapper"&gt;
       &lt;div class="swiper-slide"&gt;
           img(class="w-full h-[17.625rem] xl:h-[13.4375rem]  lg:h-80 sm:h-52 2sm:h-44" src="../../assets/images/carousel/4.jpg" alt="tree")
@@ -1408,8 +1408,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="swiper sliderPagination"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="swiper sliderPagination"&gt;
   &lt;div class="swiper-wrapper"&gt;
       &lt;div class="swiper-slide"&gt;
           img(class="w-full h-[17.625rem] xl:h-[13.4375rem]  lg:h-80 sm:h-52 2sm:h-44" src="../../assets/images/carousel/3.jpg" alt="sky view")
@@ -1469,8 +1469,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="swiper sliderLazyLoading"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="swiper sliderLazyLoading"&gt;
   &lt;div class="swiper-wrapper"&gt;
       &lt;div class="swiper-slide"&gt;
           img(class="w-full h-[17.625rem] xl:h-[13.4375rem]  lg:h-80 sm:h-52 2sm:h-44" src="../../assets/images/carousel/2.jpg" alt="butterfly")
@@ -1529,8 +1529,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="swiper slideFadeSlider"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="swiper slideFadeSlider"&gt;
   &lt;div class="swiper-wrapper"&gt;
       &lt;div class="swiper-slide"&gt;
           img(class="w-full h-[22.9375rem] xl:h-[18.125rem]  lg:h-[24.6875rem] 2lg:h-80 sm:h-52 2sm:h-44" src="../../assets/images/carousel/4.jpg" alt="tree")
@@ -1599,8 +1599,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="swiper sliderMain"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="swiper sliderMain"&gt;
   &lt;div class="swiper-wrapper"&gt;
       &lt;div class="swiper-slide"&gt;
           img(class="w-full h-[17.625rem] xl:h-[13.4375rem]  lg:h-80 sm:h-52 2sm:h-44" src="../../assets/images/carousel/1.jpg" alt="nature")
